# pyicu

./: README.md  pyproject.toml
.github/workflows/: build.yml  test.yml
hook/: __init__.py
licenses/: README.md  pyicu.txt
scripts/: before-all-linux.sh  before-build-linux.sh  configure-libicu.sh  install-libicu.sh
scripts/ci/: before-all-linux.sh
src/hook/: __init__.py
src/resolvers/: libicu.py
