[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyicu-wheels"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []


[project.urls]
Documentation = "https://github.com/xoudini/pyicu#readme"
Issues = "https://github.com/xoudini/pyicu/issues"
Source = "https://github.com/xoudini/pyicu"


[tool.hatch.version]
path = "src/icu/__about__.py"


[tool.hatch.envs.default]
dependencies = []

[tool.hatch.envs.default.env-vars]
_BUILD_DIR = "{root:real}/.build"
PYICU_URL = "https://gitlab.pyicu.org/main/pyicu.git"
PYICU_VERSION = "2.14"
ICU_MAX_MAJOR_VERSION = "76"


[tool.hatch.envs.pyicu]
skip-install = true

[tool.hatch.envs.pyicu.scripts]
clone = "git clone --branch=v{env:PYICU_VERSION} --depth=1 {env:PYICU_URL}"
src = "cp {root:real}/pyicu/py/icu/* {root:real}/src/icu/"
tests = "cp {root:real}/pyicu/test/* {root:real}/tests/"


[tool.hatch.envs.compile]
extra-dependencies = ["cibuildwheel"]

[tool.hatch.envs.compile.scripts]
libicu = "{root:real}/scripts/install-libicu.sh {args:macOS/gcc}"
build = "cibuildwheel {args:--platform linux {root:real}}"


[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/icu src/hook}"


[tool.cibuildwheel]
build = "*"
skip = ""
archs = ["auto", "aarch64"]
test-command = "python -m pytest {project}/tests"
test-requires = "pytest six"

[tool.cibuildwheel.linux]
environment = {}
environment-pass = ["PYICU_VERSION", "ICU_MAX_MAJOR_VERSION"]
before-build = "scripts/before-build-linux.sh"
manylinux-x86_64-image = "manylinux_2_28"
# repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"


[tool.hatch.build.targets.sdist]
exclude = [".github", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/icu"]

[tool.hatch.build.targets.wheel.hooks.buildext]
dependencies = ["hatch-buildext >=0.0.4"]

[tool.hatch.build.targets.wheel.hooks.buildext.extensions]
"icu._icu_" = "src.hook"


[tool.ruff]
target-version = "py38"
line-length = 88
include = ["pyproject.toml", "src/**/*.py"]


[tool.ruff.lint]
select = ["C90", "E", "F", "I", "W"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
lines-after-imports = 2
lines-between-types = 0
order-by-type = true
no-lines-before = [
  "standard-library",
  "first-party",
  "third-party",
  "local-folder",
]

[tool.ruff.format]
quote-style = "double"
