[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyicu-wheels"
dynamic = ["version"]
description = 'Wheels for PyICU'
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = ["icu", "i18n", "wheel"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Localization",
  "Topic :: Software Development :: Internationalization",
]
dependencies = []


[project.urls]
Documentation = "https://github.com/xoudini/pyicu#readme"
Issues = "https://github.com/xoudini/pyicu/issues"
Source = "https://github.com/xoudini/pyicu"


[tool.hatch.version]
path = "src/icu/__about__.py"


[tool.hatch.envs.default]
dependencies = ["hatch_buildext"]

[tool.hatch.envs.default.env-vars]
_LIBICU_DIR = "{root:real}/.build"
PYICU_URL = "https://gitlab.pyicu.org/main/pyicu.git"
PYICU_VERSION = "2.14"
LIBICU_VERSION = "76"


[tool.hatch.envs.pyicu]
skip-install = true

[tool.hatch.envs.pyicu.scripts]
clone = "git clone --branch=v{env:PYICU_VERSION} --depth=1 {env:PYICU_URL}"
src = "cp {root:real}/pyicu/py/icu/* {root:real}/src/icu/"
tests = "cp {root:real}/pyicu/test/* {root:real}/tests/"


[tool.hatch.envs.compile]
extra-dependencies = ["cibuildwheel"]

[tool.hatch.envs.compile.scripts]
libicu = "{root:real}/scripts/install-libicu.sh {args:macOS/gcc}"
build = "cibuildwheel {args:--debug-traceback --platform linux {root:real}}"


[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/icu src/hook}"


[tool.cibuildwheel]
build = "*"
environment-pass = ["_LIBICU_DIR", "PYICU_VERSION", "LIBICU_VERSION"]
skip = ""
archs = ["auto", "aarch64", "ppc64le"]
test-command = "python -m pytest {project}/tests"
test-requires = "pytest six"

[tool.cibuildwheel.linux]
before-build = "scripts/before-build-linux.sh"
manylinux-x86_64-image = "manylinux_2_28"
# NOTE: manylinux_2_28 is not supported for i686
manylinux-i686-image = "manylinux2014"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-ppc64le-image = "manylinux_2_28"
musllinux-x86_64-image = "musllinux_1_2"
musllinux-i686-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"
musllinux-ppc64le-image = "musllinux_1_2"
# repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"


[tool.hatch.build.targets.wheel]
packages = ["src/icu"]

[tool.hatch.build.targets.wheel.hooks.buildext]
dependencies = ["hatch-buildext >=0.1.1"]

[tool.hatch.build.targets.wheel.hooks.buildext.extensions]
"icu._icu_" = "src.resolvers.libicu"


[tool.ruff]
target-version = "py38"
line-length = 88
include = ["pyproject.toml", "src/**/*.py"]


[tool.ruff.lint]
select = ["C90", "E", "F", "I", "W"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
lines-after-imports = 2
lines-between-types = 0
order-by-type = true
no-lines-before = [
  "standard-library",
  "first-party",
  "third-party",
  "local-folder",
]

[tool.ruff.format]
quote-style = "double"
